# csv-scout

./: .gitignore  .gitlint  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Release.toml  git-cliff.toml
.github/workflows/: audit.yml  check.yml  dependency.yml  fmt.yml  release.yml  validate-commits.yml
examples/: sniff_gdp.rs  worldbank.rs
src/: chain.rs  lib.rs  metadata.rs  sample.rs  sniffer.rs
tests/: delimiter.rs  quote.rs  utf8test.rs
tests/data/: colon_in_quoted_json.csv  double_quoted.csv  most_fields_unquoted.csv  multi-line-cell.csv  multiline_cells_quoted.csv  not_properly_escaped.csv  tab_separated.csv
