[package]
authors = ["Omer Shtivi <oshtivi@paloaltonetworks.com>"]
categories = ["parser-implementations"]
description = "A CSV file format sniffer for Rust"
edition = "2024"
exclude = ["tests/data/*"]
keywords = ["csv"]
license = "MIT"
name = "csv-scout"
repository = "https://github.com/oshtivi/csv-scout"
version = "0.0.1"
rust-version = "1.85"

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]


[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
# bitflags = "2.5"
bytecount = "0.6"
csv = "1"
csv-core = "0.1"
hashbrown = "0.15"
memchr = "2"
# qsv-dateparser = "0.13"
regex = "1"
# tabwriter = "1.4"

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
simdutf8 = "0.1"

# use SIMD on aarch64 (Apple Silicon, Raspberry Pi 4, etc.)
[target.'cfg(target_arch = "aarch64")'.dependencies]
simdutf8 = { version = "0.1", features = ["aarch64_neon"] }
